--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".WastedFoodPage"/>
+        <activity android:name=".SettingsPage"/>
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
