--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.github.Gruzer:simple-gauge-android:0.3.1'
+//    implementation 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.4'
 }
